--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ github_username:  psicmi-win
 # googleplus_username: +jekyll
 
 # About Section
-# about_title: About Me
+about_title: About Me
 # about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Oliver and I'm a programer. I have worked at a number of companies gaining teamwork and leadership skills.
@@ -38,12 +38,11 @@ about_content: | # this will include new lines to allow paragraphs
 # educaton_title: Education
 
 # More Section
-# more_title: A Little More About Me
-# more_content: | # this will include new lines to allow paragraphs
+more_title: A Little More About Me
+more_content: | # this will include new lines to allow paragraphs
   Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-   - Rock climbing
+   - Eating
    - Gaming
-   - Knitting
    - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
 
 # Footer
